--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: The Shred Shed
+title: Shred Ahead
 email: bowmanmc@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: ""
-url: "https://www.shredshed.app"
+url: "https://www.shredahead.app"
 twitter_username: webslingerm
 github_username:  bowmanmc
 
