--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "www.shredshed.app",
+  "name": "www.shredahead.app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
